css/styles.css
body{
    font-family: "Open-Sans", sans-serif;
}
h1, h2, h3 {
     font-family: "Lobster", cursive;
}
h2 {
    color: #3046c5;
}
header h2{
    color: #cec8ff;
}
footer{
    background-image: linear-gradient(#cec8ff, white);
    padding: 20px 0px;
}
.jumbotron{
    margin: 0;
    padding: 30px;
    background-image: linear-gradient(to right, #5637dd, #3046c5, #60106b); 
    color: white;
}
.row-content{
    padding: 50px 0px;
    border-bottom: 1px ridge;
    min-height: 200px;
}
.row-content-noline{
    padding: 50px 0px;
    min-height: 200px;
}
.navbar{

    background-color: #901cad;
}

